--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="share_key">Share Key</string>
+    <string name="encryption">Encryption</string>
     <string name="messages">Messages</string>
     <string name="settings">Settings</string>
 
